[package]
name = "sqlx_user"
version = "0.1.0"
authors = ["Milan Zivkovic <zivkovic.milan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
listenfd = "0.3.3"
serde = "1.0.124"
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.14"
anyhow = "1.0.38"
futures = "0.3.13"
chrono = { version="0.4.19", features = ["serde"] }